@@ -1,3 +1,8 @@
+Mon Mar  8 15:59:29 GMT 2004  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (get_catpath): Use xstrdup and strappend rather than
+	  doing memory management by hand.
+
 Mon Mar  8 11:28:51 GMT 2004  Colin Watson  <cjwatson@debian.org>
 
 	* include/manconfig.h.in: Protect against multiple inclusion.
